--- a/config/_default/module.yaml
+++ b/config/_default/module.yaml
@@ -5,5 +5,5 @@
 ############################
 
 imports:
-  - path: github.com/ruskicrew/ruskicrew.github.io/modules/blox-plugin-netlify
-  - path: github.com/ruskicrew/ruskicrew.github.io/modules/blox-tailwind
+  - path: github.com/HugoBlox/hugo-blox-builder/modules/blox-plugin-netlify
+  - path: github.com/HugoBlox/hugo-blox-builder/modules/blox-tailwind
